[package]
name = "mytest"
version = "0.1.0"
authors = ["Kyle Coffey <mariorules24@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
enum-map = "0.5.0"
lazy_static = "1.3.0"
strum = "0.15.0"
strum_macros = "0.15.0"
rand = "0.7.0"
[dependencies.sdl2]
version = "0.32"
default-features = false
features = ["image"]
